# github-meme-bot

./: .env  Dockerfile  README.md  bot.py  pyproject.toml
.github/workflows/: docker.yml  memebot.yml
src/plugins/memes/: __init__.py  config.py  rule.py  utils.py
